fix ancor break in devices with mobile

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -97,6 +97,7 @@ nav {
         color: white;
         font: bold 16px Arial, Verdana, Helvetica, sans-serif;
         text-decoration: none;
+        min-width: 35px;
         padding:10px;
         padding-left: 25px;
         border-radius: 4px;
